# structflo-cser

./: CLAUDE.md  pyproject.toml
notebooks/: 01-quickstart.ipynb  03-PDF.ipynb
notebooks/notebook-data/: example.pptx
scripts/finetune/lps/: diag_e2e_decompose.py  diag_label_recall.py  diag_lps_scores.py
structflo/cser/: weights.py
structflo/cser/inference/: detector.py
structflo/cser/relmatch/: matcher.py
